final edit before fall career fair 2018

--- a/resume.tex
+++ b/resume.tex
@@ -59,19 +59,17 @@
 \vspace{-2mm}
 \cventry
 	{BSE in Computer Science/Minor in Music}
-	{University of Michigan}
-	{Ann Arbor, MI}
-	{2021}
+	{University of Michigan - Ann Arbor}
+	{}
+	{Expected Date of Graduation: May 2020}
 	{\begin{cvitems}
 		\item{GPA: 3.810}
-		\item {Enrolled Courses: EECS 281 - DS\&A, EECS 370 - Intro to Computer Organization, THEORY 137: Intro to Music Theory, MUSPERF 391: Independent Music Study (Piano)}
-		\item {Completed Courses: PAT 305: Video Game Music, PHYSICS 160: Honors Mechanics, ENGR 100: Gaming for the Greater Good, EECS 280: Intro to DS\&A, EECS 203: Discrete Math, EECS 398: Computing for Computer Scientists, PHYSICS 260: Honors E\&M}
 		\end{cvitems}}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %     Employment
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\vspace{-7mm}
+\vspace{-6mm}
 \cvsection{Employment}
 \vspace{-3mm}
 
@@ -81,8 +79,8 @@
 	{Okemos, MI}
 	{May 2018 – August 2018}
 	{\begin{cvitems}
-		\item {Work on Camtasia, a video editing program made for creating presentations and video tutorials.}
-		\item {Do both feature work and bug fixing on a codebase that uses MFC (C++), WPF (C\# + XAML) as well as a C++ business logic layer.}
+		\item {Worked on Camtasia, a video editing program made for creating presentations and video tutorials.}
+		\item {Did both feature work and bug fixing on Camtasia, using MFC (C++), WPF (C\# + XAML) as well as a C++ business logic layer.}
 		\end{cvitems}}
 
 	\vspace{-4mm}
@@ -92,8 +90,8 @@
 	{Okemos, MI}
 	{June 2017 – August 2017}
 	{\begin{cvitems}
-		\item {OIDC/SecureAuth integration with desktop and web applications}
-		\item {Design and implementation of a REST API using JPA, Hibernate, Wildfly, and EJB}
+		\item {Integrated Open ID Connect (OIDC)/SecureAuth with desktop and web applications}
+		\item {Designed and implemented a REST API using the Java Persistence API (JPA), Hibernate, Wildfly, and Enterprise JavaBeans (EJB)}
 		\end{cvitems}}
 
 	\vspace{-4mm}
@@ -115,18 +113,18 @@
 \vspace{-3mm}
 
 	\cventry
-	{A 2D platforming game featuring original spritework and original music. Designed to be runnable on the GameShell by ClockworkPi, a Linux machine with a 320x240 display.}
+	{A 2D platforming game featuring original spritework and original music, written in C++. Designed to be runnable on the GameShell by ClockworkPi, a Linux machine with a 320x240 display. Frameworks used: SDL2, Catch2 (unit tests).}
 	{Untitled Video Game}
 	{github.com/eashwar/sdl-game}
-	{SDL2, Catch2 (unit tests)}
+	{}
 	{}
 
 	\vspace{-6mm}
 	\cventry
-	{Command line tool allowing for the control of basic Spotify playback on the Bash shell}
+	{Command line tool allowing for the control of basic Spotify playback on the Bash shell. Frameworks/Tools used: ExpressJS, Shell Scripting}
 	{now-playing: Spotify control for Bash}
 	{github.com/eashwar/now-playing}
-	{NodeJS, ExpressJS, Shell Scripting}
+	{}
 	{}
 	
 	\vspace{-6mm}
@@ -134,15 +132,15 @@
 	{Composed and arranged songs performed electronically and live using the DAW Reaper, piano, clarinet, and bass clarinet.}
 	{Music Composition}
 	{soundcloud.com/eashw}
-	{Cockos Reaper}
+	{}
 	{}
 	
 	\vspace{-6mm}
 	\cventry
-	{A personal website displaying a full list of past and current projects.}
+	{A personal website displaying a full list of past and current projects. Frameworks used: Bootstrap, Jekyll, JQuery, MathJax}
 	{Personal Website}
 	{eashwar.github.io}
-	{Bootstrap, Jekyll, JQuery}
+	{}
 	{}
 	
 	\vspace{-6mm}
@@ -159,34 +157,35 @@
 	{}
 	{January 2018 – Present}
 	{\begin{cvitems}
-		\item {Give workshops and lead discussions on video game music analysis, music theory, composition, and music production}
+		\item {Leading discussions and workshops on video game music analysis, music theory, composition, and music production}
 		\item {Workshops given: "'I've heard that before!': An Introduction to Leitmotifs in Video Games", "How to Write a Pokemon Battle Theme in 30 minutes"}
-		\item {Manage mailing lists, online calendar, Discord server, and social media for the club}
+		\item {Managing mailing lists, online calendar, Discord server, and social media for the club}
 		\end{cvitems}}
 
 	\vspace{-4mm}
 	\cventry
-	{Member (2017-18) \& Treasurer (2018-Present)}
+	{Treasurer (2018-Present) \& Member (2017-18)}
 	{FIRST Alumni and Mentors Network at Michigan (FAMNM)}
 	{}
 	{September 2017 – Present}
 	{\begin{cvitems}
-		\item {Coordinate the 2018 FIRST Robotics Competition Kickoff and Robot Quick Build held at the University of Michigan in January}
-		\item {Volunteer at FIRST events across the state of Michigan as a referee (FRC) and a judge (FTC)}
-		\item {Write grant and funding proposals to allow for improvement of events run by FAMNM and reimbursement of FAMNM volunteers}
+		\item {Coordinating the 2018 FIRST Robotics Competition Kickoff and Robot Quick Build held at the University of Michigan in January}
+		\item {Volunteering at FIRST events across the state of Michigan as a referee (FRC) and a judge (FTC)}
+		\item {Writing grant and funding proposals to allow for improvement of events run by FAMNM and reimbursement of FAMNM volunteers}
 		\end{cvitems}}
 	
 	\vspace{-4mm}
 	\cventry
-	{Member}
+	{Core Team Member}
 	{Michigan Hackers}
 	{}
 	{January 2018 – Present}
 	{\begin{cvitems}
-		\item {Participate in weekly "hack nights"; attend "Lightning Talks" on various CS topics given by other members of the club, work on side projects, and interact with other CS students at the University of Michigan.}
-		\item {Attend collegiate hackathons as a group}
+		\item {Upgrading and maintaining the Michigan Hackers website (michiganhackers.org)}
+		\item {Participating in weekly "hack nights"; attend "Lightning Talks" on various CS topics given by other members of the club, work on side projects, and interact with other CS students at the University of Michigan.}
 		\end{cvitems}}
 	\vspace{-4mm}
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %     Skills
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -225,5 +224,4 @@
 		\item {Cockos Reaper, Avid Pro Tools, MIDI sequencing, Clarinet Family (8 years), Piano (12 years), Composition (3 years)}
 		\end{cvitems}}
 	\vspace{-4mm}
-
 \end{document}
