riot cover letter

--- a/awesome-cv.cls
+++ b/awesome-cv.cls
@@ -108,7 +108,7 @@
 %-------------------------------------------------------------------------------
 %% Page Layout
 % Configure page margins with geometry
-\geometry{left=1.0cm, top=1.0cm, right=1.0cm, bottom=1.0cm, footskip=.5cm}
+\geometry{left=2.0cm, top=2.0cm, right=2.0cm, bottom=2.0cm, footskip=.5cm}
 
 %% Header & Footer
 % Set offset to each header and offset
@@ -268,6 +268,10 @@
 \newcommand*{\lettertextstyle}{\fontsize{10pt}{1.4em}\bodyfontlight\upshape\color{graytext}}
 \newcommand*{\letternamestyle}[1]{{\fontsize{10pt}{1em}\bodyfont\bfseries\color{darktext} #1}}
 \newcommand*{\letterenclosurestyle}[1]{{\fontsize{10pt}{1em}\bodyfontlight\slshape\color{lighttext} #1}}
+\newcommand*{\letteropenclosestyle}[1]{{\fontsize{8pt}{1em}\bodyfont\upshape\color{darkgreen} #1}}
+\newcommand*{\letterheaderfirstnamestyle}[1]{{\fontsize{22pt}{1em}\headerfontlight\color{green} #1}}
+\newcommand*{\letterheaderlastnamestyle}[1]{{\fontsize{22pt}{1em}\headerfont\bfseries\color{darkgreen} #1}}
+
 
 
 %-------------------------------------------------------------------------------
