replace sdl game with midio bros until i have more to show for it

--- a/resume.tex
+++ b/resume.tex
@@ -113,9 +113,9 @@
 \vspace{-3mm}
 
 	\cventry
-	{A 2D platforming game featuring original spritework and original music, written in C++. Designed to be runnable on the GameShell by ClockworkPi, a Linux machine with a 320x240 display. Frameworks used: SDL2, Catch2 (unit tests).}
-	{Untitled Video Game}
-	{github.com/eashwar/sdl-game}
+	{An application that allows you to control level 1-1 of Super Mario Bros. by playing the overworld theme on a MIDI keyboard to control Mario. Made for MHacks 11. Frameworks used: pygame, pyautogui}
+	{Super MIDIo Bros.}
+	{github.com/eashwar/super-midio-bros}
 	{}
 	{}
 
