--- a/cover-letter.tex
+++ b/cover-letter.tex
@@ -43,7 +43,7 @@
 
     \letteropenclosestyle{To whom it may concern:}\\\\
 
-    \lettertextstyle{Hello! My name is Eashwar Mohan, and I'm a student working towards a BSE in computer science and minor in music at the University of Michigan. I'm writing this to express my interest in a software engineering internship at [COMPANY] for Summer 2019. [CONNECTION TO COMPANY]. With my diverse set of experiences, I am confident in my strength as a candidate for the internship position.}\\
+    \lettertextstyle{Hello! My name is Eashwar Mohan, and I'm a junior working towards a BSE in computer science and minor in music at the University of Michigan. I'm writing this to express my interest in a software engineering internship at [COMPANY] for Summer 2019. [CONNECTION TO COMPANY]. With my diverse set of experiences, I am confident in my strength as a candidate for the internship position.}\\
 
     \lettertextstyle{At the University of Michigan, I'm involved with various organizations that are helping me grow to be a professional with a versatile skillset. I am currently the VP of Treasury for the FIRST Alumni and Mentors Network at Michigan (FAMNM), a volunteer organization benefitting STEM students in K-12 participating in FIRST robotics programs. In my role, I manage the organization's budget; apply for event funding from various sources, and perform fundraising tasks to help establish a FIRST Scholarship at the University of Michigan, which will be for underprivileged or first-generation freshman. Along with my work in FAMNM, I am a Speaker and Director of Online Communications for the Video Game Music Club. This club, of which I am a co-founder, serves as a place for students who are interested in the game audio industry to interact with, learn, compose, and discuss ideas with each other. Finally, I am on the web development team for the Michigan Hackers club, where I work to help maintain and improve the club's website.}\\
 
