update website url

--- a/resume.tex
+++ b/resume.tex
@@ -49,7 +49,7 @@
 \begin{center}
 	\headerfirstnamestyle{Eashwar} \headerlastnamestyle{Mohan} \\
 
-	{\color{darkgreen}{\faEnvelope\ \bodyfont{eashwar@umich.edu}}} | {\color{darkgreen}{\faMapMarker\ \bodyfont{Ann Arbor, MI}}} | {\color{darkgreen}{\faLink\ \bodyfont{eashwar.github.io}}}
+	{\color{darkgreen}{\faEnvelope\ \bodyfont{eashwar@umich.edu}}} | {\color{darkgreen}{\faMapMarker\ \bodyfont{Ann Arbor, MI}}} | {\color{darkgreen}{\faLink\ \bodyfont{eash.fyi}}}
 \end{center}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %     Education
@@ -139,7 +139,7 @@
 	\cventry
 	{A personal website displaying a full list of past and current projects. Frameworks used: Bootstrap, Jekyll, JQuery, MathJax}
 	{Personal Website}
-	{eashwar.github.io}
+	{eash.fyi}
 	{}
 	{}
 	
@@ -158,7 +158,7 @@
 	{January 2018 – Present}
 	{\begin{cvitems}
 		\item {Leading discussions and workshops on video game music analysis, music theory, composition, and music production}
-		\item {Workshops given: "'I've heard that before!': An Introduction to Leitmotifs in Video Games", "How to Write a Pokemon Battle Theme in 30 minutes"}
+		\item {See personal website for full list of presentations given at club}
 		\item {Managing mailing lists, online calendar, Discord server, and social media for the club}
 		\end{cvitems}}
 
@@ -181,7 +181,7 @@
 	{}
 	{January 2018 – Present}
 	{\begin{cvitems}
-		\item {Upgrading and maintaining the Michigan Hackers website (michiganhackers.org)}
+		\item {Developing the back-end for the Michigan Hackers website (michiganhackers.org) using Golang.}
 		\item {Participating in weekly "hack nights"; attend "Lightning Talks" on various CS topics given by other members of the club, work on side projects, and interact with other CS students at the University of Michigan.}
 		\end{cvitems}}
 	\vspace{-4mm}
