--- a/resume.tex
+++ b/resume.tex
@@ -74,6 +74,18 @@
 \vspace{-3mm}
 
 	\cventry
+	{Technical Lab Assistant}
+	{Crowds and Machines Lab at the University of Michigan}
+	{Ann Arbor, MI}
+	{January 2019 – Present}
+	{\begin{cvitems}
+		\item {Educate undergraduate researchers on various tools and skills, such as version control, debugging, and software architecture}
+		\item {Hold office hours to assist researchers with technical problems}
+		\item {Update and maintain various developer tools used by the lab}
+		\end{cvitems}}
+
+	\vspace{-4mm}
+	\cventry
 	{Software Engineer Intern}
 	{TechSmith Corporation}
 	{Okemos, MI}
@@ -94,16 +106,16 @@
 		\item {Designed and implemented a REST API using the Java Persistence API (JPA), Hibernate, Wildfly, and Enterprise JavaBeans (EJB)}
 		\end{cvitems}}
 
-	\vspace{-4mm}
-	\cventry
-	{Computer Consultant}
-	{University of Michigan Dental Informatics}
-	{Ann Arbor, MI}
-	{September 2017 – Present}
-	{\begin{cvitems}
-		\item {Assist dental faculty and students of the School of Dentistry over email, phone, and in-person with technological issues}
-		\item {File and assign tickets using the ITS and manage the Desktop Support front desk}
-		\end{cvitems}}
+	% \vspace{-4mm}
+	% \cventry
+	% {Computer Consultant}
+	% {University of Michigan Dental Informatics}
+	% {Ann Arbor, MI}
+	% {September 2017 – Present}
+	% {\begin{cvitems}
+	% 	\item {Assist dental faculty and students of the School of Dentistry over email, phone, and in-person with technological issues}
+	% 	\item {File and assign tickets using the ITS and manage the Desktop Support front desk}
+	% 	\end{cvitems}}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %     Projects
