--- a/cover-letter.tex
+++ b/cover-letter.tex
@@ -8,7 +8,7 @@
 \fontdir[fonts/]
 
 %%% Configure a directory location for sections
-\newcommand*{\sectiondir}{riot-cover-letter/}
+\newcommand*{\sectiondir}{cover-letter/}
 
 %%% Override color
 % Awesome Colors: awesome-emerald, awesome-skyblue, awesome-red, awesome-pink, awesome-orange
@@ -35,20 +35,25 @@
         \vspace{-10mm}
         {\color{darkgreen}{\faEnvelope\ \bodyfont{eashwar@umich.edu}}}\\
         {\color{darkgreen}{\faMapMarker\ \bodyfont{Ann Arbor, MI}}}\\
-    {\color{darkgreen}{\faLink\ \bodyfont{eashwar.github.io}}}
+    {\color{darkgreen}{\faLink\ \bodyfont{https://eash.fyi}}}
     \end{flushright}
 
-    \recipientname{Riot Games}
-    \letterdate{17 September 2018}
+    \letteropenclosestyle{17 September 2018}\\
 
-    \letteropenclosestyle{To whom it may concern:}\\\\
+    \letteropenclosestyle{Company Name}\\
+    \letteropenclosestyle{Address One}\\
+    \letteropenclosestyle{Address Two}\\
 
-    \lettertextstyle{Hello! My name is Eashwar Mohan, and I'm a junior working towards a BSE in computer science and minor in music at the University of Michigan. I'm writing this to express my interest in a software engineering internship at [COMPANY] for Summer 2019. [CONNECTION TO COMPANY]. With my diverse set of experiences, I am confident in my strength as a candidate for the internship position.}\\
+    \lettertextstyle{Dear Hiring Manager:}\\\\
+    \begin{spacing}{1.2}
+    \lettertextstyle{Hello! My name is Eashwar Mohan, and I am a junior working towards a BSE in computer science and minor in music at the University of Michigan. I am writing this to express my interest in a software engineering internship at [COMPANY] for Summer 2019. [CONNECTION TO COMPANY]. With my diverse set of experiences in my music and computer science coursework, past employment, and extracurricular activity, I am confident in my strength as a candidate for [POSITION NAME] position.}\\
 
-    \lettertextstyle{At the University of Michigan, I'm involved with various organizations that are helping me grow to be a professional with a versatile skillset. I am currently the VP of Treasury for the FIRST Alumni and Mentors Network at Michigan (FAMNM), a volunteer organization benefitting STEM students in K-12 participating in FIRST robotics programs. In my role, I manage the organization's budget; apply for event funding from various sources, and perform fundraising tasks to help establish a FIRST Scholarship at the University of Michigan, which will be for underprivileged or first-generation freshman. Along with my work in FAMNM, I am a Speaker and Director of Online Communications for the Video Game Music Club. This club, of which I am a co-founder, serves as a place for students who are interested in the game audio industry to interact with, learn, compose, and discuss ideas with each other. Finally, I am on the web development team for the Michigan Hackers club, where I work to help maintain and improve the club's website.}\\
+    \lettertextstyle{My rigorous coursework in both computer science and music has given me a solid foundation to support myself both as a composer as well as a game developer. I have worked for the past three semesters with Matthew Thompson, the professor of game audio at the school of music, to combine my computer science knowledge and musical ability in game development. My internships at Delta Dental of Michigan (DDMI) and TechSmith have equipped me with invaluable experience in object oriented programming in Java, C\#, and C++. At DDMI, I led the development of a RESTful API, helping me discover an interest in backend development. At TechSmith, I learned about "globalized code", which is the idea that software should be programmed in a way that makes it easy to translate for users around the globe. I also currently am employed at the Crowds and Machines Lab at the University of Michigan, where I educate undergraduate researchers in topics such as version control and principles of software architecture.}\\
+
+    \lettertextstyle{At the University of Michigan, I'm involved with various organizations that are helping me grow to be a professional with a versatile skillset. I am currently the VP of Treasury for the FIRST Alumni and Mentors Network at Michigan (FAMNM), a volunteer organization benefitting STEM students in K-12 participating in FIRST robotics programs. In my role, I manage the organization's \$10,000 budget; apply for event funding from various sources, and perform fundraising tasks to help establish a \$1,000 FIRST Scholarship at the University of Michigan, which will be for underprivileged or first-generation freshman. Along with my work in FAMNM, I am a Speaker and Director of Online Communications for the Video Game Music Club. This club, of which I am a co-founder, serves as a community for students passionate about the game audio industry, where at weekly meetings we discuss various topics related to the industry, discuss compositions we're working on, and collaborate. Finally, I am on the web development team for the Michigan Hackers club, working as the lead backend developer for the club's website.}\\
 
     \lettertextstyle{I feel that my broad range of experiences both on campus and at previous internships would enable me to be an effective, communicative, and hard-working teammate at [COMPANY]. It would be an incredible experience to intern there and I truly believe that my experience can be put to great use. Thank you for considering me as a candidate and I hope to hear from you soon.}\\
-
+    \end{spacing}
     \letteropenclosestyle{Regards,}\\
 
     \letteropenclosestyle{Eashwar Mohan}
