--- a/cover-letter.tex
+++ b/cover-letter.tex
@@ -46,7 +46,7 @@
 
     \lettertextstyle{Dear Hiring Manager:}\\\\
     \begin{spacing}{1.2}
-    \lettertextstyle{Hello! My name is Eashwar Mohan, and I am a junior working towards a BSE in computer science and minor in music at the University of Michigan. I am writing this to express my interest in a software engineering internship at [COMPANY] for Summer 2019. [CONNECTION TO COMPANY]. With my diverse set of experiences in my music and computer science coursework, past employment, and extracurricular activity, I am confident in my strength as a candidate for [POSITION NAME] position.}\\
+    \lettertextstyle{Hello! My name is Eashwar Mohan, and I am a rising senior working towards a BSE in computer science and minor in music at the University of Michigan. I am writing this to express my interest in a software engineering internship at [COMPANY] for Summer 2019. [CONNECTION TO COMPANY]. With my diverse set of experiences in my music and computer science coursework, past employment, and extracurricular activity, I am confident in my strength as a candidate for [POSITION NAME] position.}\\
 
     \lettertextstyle{My rigorous coursework in both computer science and music has given me a solid foundation to support myself both as a composer as well as a game developer. I have worked for the past three semesters with Matthew Thompson, the professor of game audio at the school of music, to combine my computer science knowledge and musical ability in game development. My internships at Delta Dental of Michigan (DDMI) and TechSmith have equipped me with invaluable experience in object oriented programming in Java, C\#, and C++. At DDMI, I led the development of a RESTful API, helping me discover an interest in backend development. At TechSmith, I learned about "globalized code", which is the idea that software should be programmed in a way that makes it easy to translate for users around the globe. I also currently am employed at the Crowds and Machines Lab at the University of Michigan, where I educate undergraduate researchers in topics such as version control and principles of software architecture.}\\
 
