--- a/resume.tex
+++ b/resume.tex
@@ -69,9 +69,9 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %     Employment
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\vspace{-6mm}
+\vspace{-5mm}
 \cvsection{Employment}
-\vspace{-3mm}
+\vspace{-2mm}
 
 	\cventry
 	{Technical Lab Assistant}
@@ -91,8 +91,8 @@
 	{Okemos, MI}
 	{May 2018 – August 2018}
 	{\begin{cvitems}
-		\item {Worked on Camtasia, a video editing program made for creating presentations and video tutorials.}
-		\item {Did both feature work and bug fixing on Camtasia, using MFC (C++), WPF (C\# + XAML) as well as a C++ business logic layer.}
+		\item {Participated in updating Camtasia, a video editing program made for creating presentations and video tutorials.}
+		\item {Programmed new features and resolved bugs for Camtasia, using MFC (C++), WPF (C\# + XAML) as well as a C++ business logic layer.}
 		\end{cvitems}}
 
 	\vspace{-4mm}
@@ -117,12 +117,12 @@
 	% 	\item {File and assign tickets using the ITS and manage the Desktop Support front desk}
 	% 	\end{cvitems}}
 
+\vspace{-5mm}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %     Projects
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\vspace{-6mm}
 \cvsection{Projects}
-\vspace{-3mm}
+\vspace{-2mm}
 
 	\cventry
 	{An application that allows you to control level 1-1 of Super Mario Bros. by playing the overworld theme on a MIDI keyboard to control Mario. Made for MHacks 11. Frameworks used: pygame, pyautogui}
@@ -155,23 +155,22 @@
 	{}
 	{}
 	
-	\vspace{-6mm}
+	\vspace{-5mm}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %     Activities
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \vspace{-2mm}
 \cvsection{Activities}
-\vspace{-3mm}
+\vspace{-2mm}
 	\cventry
 	{Speaker/Director of Online Communications}
 	{Video Game Music Club}
 	{}
 	{January 2018 – Present}
 	{\begin{cvitems}
-		\item {Leading discussions and workshops on video game music analysis, music theory, composition, and music production}
-		\item {See personal website for full list of presentations given at club}
-		\item {Managing mailing lists, online calendar, Discord server, and social media for the club}
+		\item {Lead discussions and workshops on video game music analysis, music theory, composition, and music production}
+		\item {Manage mailing lists, online calendar, Discord server, and social media for the club}
 		\end{cvitems}}
 
 	\vspace{-4mm}
@@ -181,9 +180,9 @@
 	{}
 	{September 2017 – Present}
 	{\begin{cvitems}
-		\item {Coordinating the 2018 FIRST Robotics Competition Kickoff and Robot Quick Build held at the University of Michigan in January}
-		\item {Volunteering at FIRST events across the state of Michigan as a referee (FRC) and a judge (FTC)}
-		\item {Writing grant and funding proposals to allow for improvement of events run by FAMNM and reimbursement of FAMNM volunteers}
+		\item {Fundraise over \$25,000 for the establishment of an endowed scholarship for incoming freshman at the University}
+		\item {Coordinate the 2018 FIRST Robotics Competition Kickoff and Robot Quick Build held at the University of Michigan in January}
+		\item {Write grant and funding proposals to allow for improvement of events run by FAMNM and reimbursement of FAMNM volunteers}
 		\end{cvitems}}
 	
 	\vspace{-4mm}
@@ -193,17 +192,17 @@
 	{}
 	{January 2018 – Present}
 	{\begin{cvitems}
-		\item {Developing the back-end for the Michigan Hackers website (michiganhackers.org) using Golang.}
-		\item {Participating in weekly "hack nights"; attend "Lightning Talks" on various CS topics given by other members of the club, work on side projects, and interact with other CS students at the University of Michigan.}
+		\item {Develop the back-end for the Michigan Hackers website (michiganhackers.org) using the Go framework Gin.}
+		\item {Participate in weekly "hack nights"; attend "Lightning Talks" on various CS topics given by other members of the club, work on side projects, and interact with other CS students at the University of Michigan.}
 		\end{cvitems}}
 	\vspace{-4mm}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %     Skills
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\vspace{-2mm}
+\vspace{-1mm}
 \cvsection{Skills}
-\vspace{-3mm}
+\vspace{-2mm}
 	\cventry
 	{}
 	{Languages}
@@ -211,7 +210,7 @@
 	{}
 	{\begin{cvitems}
 		\vspace{-7mm}
-		\item {C++, Java, JavaScript, Python, C\#, XML, XAML, SQL, HTML/CSS, Markdown, LaTeX}
+		\item {C++, Java, JavaScript, Python, C\#, Go, XML, XAML, SQL, HTML/CSS, Markdown, LaTeX}
 		\end{cvitems}}
 
 	\vspace{-8mm}
