--- a/cover-letter.tex
+++ b/cover-letter.tex
@@ -35,7 +35,7 @@
         \vspace{-10mm}
         {\color{darkgreen}{\faEnvelope\ \bodyfont{eashwar@umich.edu}}}\\
         {\color{darkgreen}{\faMapMarker\ \bodyfont{Ann Arbor, MI}}}\\
-    {\color{darkgreen}{\faLink\ \bodyfont{https://eash.fyi}}}
+    {\color{darkgreen}{\faLink\ \bodyfont{https://eash.dev}}}
     \end{flushright}
 
     \letteropenclosestyle{17 September 2018}\\
