--- a/resume.tex
+++ b/resume.tex
@@ -49,7 +49,7 @@
 \begin{center}
 	\headerfirstnamestyle{Eashwar} \headerlastnamestyle{Mohan} \\
 
-	{\color{darkgreen}{\faEnvelope\ \bodyfont{eashwar@umich.edu}}} | {\color{darkgreen}{\faMapMarker\ \bodyfont{Ann Arbor, MI}}} | {\color{darkgreen}{\faLink\ \bodyfont{eash.fyi}}}
+	{\color{darkgreen}{\faEnvelope\ \bodyfont{eashwar@umich.edu}}} | {\color{darkgreen}{\faMapMarker\ \bodyfont{Ann Arbor, MI}}} | {\color{darkgreen}{\faLink\ \bodyfont{eash.dev}}}
 \end{center}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %     Education
