update resume, do some spacing fixes

--- a/resume.tex
+++ b/resume.tex
@@ -61,7 +61,7 @@
 	{BSE in Computer Science/Minor in Music}
 	{University of Michigan - Ann Arbor}
 	{}
-	{Expected Date of Graduation: May 2020}
+	{Expected Graduation May 2020}
 	{\begin{cvitems}
 		\item{GPA: 3.810}
 		\end{cvitems}}
@@ -79,7 +79,7 @@
 	{Ann Arbor, MI}
 	{January 2019 – Present}
 	{\begin{cvitems}
-		\item {Educate undergraduate researchers on various tools and skills, such as version control, debugging, and software architecture}
+		\item {Educate undergraduate researchers on various tools and skills, such as version control, and software architecture}
 		\item {Hold office hours to assist researchers with technical problems}
 		\item {Update and maintain various developer tools used by the lab}
 		\end{cvitems}}
@@ -103,7 +103,7 @@
 	{June 2017 – August 2017}
 	{\begin{cvitems}
 		\item {Integrated Open ID Connect (OIDC)/SecureAuth with desktop and web applications}
-		\item {Designed and implemented a REST API using the Java Persistence API (JPA), Hibernate, Wildfly, and Enterprise JavaBeans (EJB)}
+		\item {Designed and implemented a REST API using the Java Persistence API (JPA), and Enterprise JavaBeans (EJB)}
 		\end{cvitems}}
 
 	% \vspace{-4mm}
@@ -127,7 +127,7 @@
 	\cventry
 	{An application that allows you to control level 1-1 of Super Mario Bros. by playing the overworld theme on a MIDI keyboard to control Mario. Made for MHacks 11. Frameworks used: pygame, pyautogui}
 	{Super MIDIo Bros.}
-	{github.com/eashwar/super-midio-bros}
+	{GitHub: eashwar/super-midio-bros}
 	{}
 	{}
 
@@ -135,7 +135,7 @@
 	\cventry
 	{Command line tool allowing for the control of basic Spotify playback on the Bash shell. Frameworks/Tools used: ExpressJS, Shell Scripting}
 	{now-playing: Spotify control for Bash}
-	{github.com/eashwar/now-playing}
+	{GitHub: eashwar/now-playing}
 	{}
 	{}
 	
@@ -180,20 +180,20 @@
 	{}
 	{September 2017 – Present}
 	{\begin{cvitems}
-		\item {Fundraise over \$25,000 for the establishment of an endowed scholarship for incoming freshman at the University}
-		\item {Coordinate the 2018 FIRST Robotics Competition Kickoff and Robot Quick Build held at the University of Michigan in January}
-		\item {Write grant and funding proposals to allow for improvement of events run by FAMNM and reimbursement of FAMNM volunteers}
+		\item {Fundraise over \$25,000 to establish an endowed scholarship for FIRST alumni at the University of Michigan}
+		\item {Coordinate the 2018 FIRST Robot Quick Build held at the University of Michigan North Campus in January}
+		\item {Draft and submit funding proposals to facilitate the improvement FAMNM events}
 		\end{cvitems}}
 	
 	\vspace{-4mm}
 	\cventry
-	{Core Team Member}
+	{Web Team Member}
 	{Michigan Hackers}
 	{}
 	{January 2018 – Present}
 	{\begin{cvitems}
 		\item {Develop the back-end for the Michigan Hackers website (michiganhackers.org) using the Go framework Gin.}
-		\item {Participate in weekly "hack nights"; attend "Lightning Talks" on various CS topics given by other members of the club, work on side projects, and interact with other CS students at the University of Michigan.}
+		\item {Attend weekly meetings to promote using CS for personal projects within the student body of U of M}
 		\end{cvitems}}
 	\vspace{-4mm}
 
