--- a/resume.tex
+++ b/resume.tex
@@ -80,9 +80,21 @@
 	{January 2019 – Present}
 	{\begin{cvitems}
 		\item {Educate undergraduate researchers on various tools and skills, such as version control, and software architecture}
-		\item {Hold office hours to assist researchers with technical problems}
-		\item {Update and maintain various developer tools used by the lab}
-		\end{cvitems}}
+		\item {Hold office hours to assist researchers with technical problems and create/maintain documentation for the lab.}
+	\end{cvitems}}
+
+	\vspace{-4mm}
+	\cventry
+	{Software Engineer Intern}
+	{Roblox Corporation}
+	{San Mateo, CA}
+	{June 2019 – August 2019}
+	{\begin{cvitems}
+		\item {Designed and implemented a RESTful API in .NET currently receiving thousands of requests a second in production,
+		 which keeps track of dependencies between in-game assets on the Roblox game platform.}
+		\item {Beta test a development workflow in Docker Compose, Hashicorp 
+		Nomad and Vault, and Drone CI.}
+	\end{cvitems}}
 
 	\vspace{-4mm}
 	\cventry
@@ -91,20 +103,20 @@
 	{Okemos, MI}
 	{May 2018 – August 2018}
 	{\begin{cvitems}
-		\item {Participated in updating Camtasia, a video editing program made for creating presentations and video tutorials.}
-		\item {Programmed new features and resolved bugs for Camtasia, using MFC (C++), WPF (C\# + XAML) as well as a C++ business logic layer.}
-		\end{cvitems}}
+		\item {Participated in updating Camtasia, a screen capture and video editing program.}
+		\item {Implemented new features for Camtasia, using MFC (C++) and WPF (C\# + XAML).}
+	\end{cvitems}}
 
-	\vspace{-4mm}
-	\cventry
-	{Software Engineer Intern}
-	{Delta Dental of Michigan}
-	{Okemos, MI}
-	{June 2017 – August 2017}
-	{\begin{cvitems}
-		\item {Integrated Open ID Connect (OIDC)/SecureAuth with desktop and web applications}
-		\item {Designed and implemented a REST API using the Java Persistence API (JPA), and Enterprise JavaBeans (EJB)}
-		\end{cvitems}}
+	% \vspace{-4mm}
+	% \cventry
+	% {Software Engineer Intern}
+	% {Delta Dental of Michigan}
+	% {Okemos, MI}
+	% {June 2017 – August 2017}
+	% {\begin{cvitems}
+	% 	\item {Integrated Open ID Connect (OIDC)/SecureAuth with desktop and web applications}
+	% 	\item {Designed and implemented a REST API using the Java Persistence API (JPA), and Enterprise JavaBeans (EJB)}
+	% 	\end{cvitems}}
 
 	% \vspace{-4mm}
 	% \cventry
@@ -125,7 +137,8 @@
 \vspace{-2mm}
 
 	\cventry
-	{An application that allows you to control level 1-1 of Super Mario Bros. by playing the overworld theme on a MIDI keyboard to control Mario. Made for MHacks 11. Frameworks used: pygame, pyautogui}
+	{Control Mario level 1-1 of Super Mario Bros. by playing the overworld theme on a MIDI keyboard. Made for MHacks 11.
+	 Made with pygame, pyautogui}
 	{Super MIDIo Bros.}
 	{GitHub: eashwar/super-midio-bros}
 	{}
@@ -133,7 +146,7 @@
 
 	\vspace{-6mm}
 	\cventry
-	{Command line tool allowing for the control of basic Spotify playback on the Bash shell. Frameworks/Tools used: ExpressJS, Shell Scripting}
+	{Command line tool to control of basic Spotify playback in bash. Made with ExpressJS, shell scripting}
 	{now-playing: Spotify control for Bash}
 	{GitHub: eashwar/now-playing}
 	{}
@@ -164,36 +177,38 @@
 \cvsection{Activities}
 \vspace{-2mm}
 	\cventry
-	{Speaker/Director of Online Communications}
+	{Speaker/Director of Online Communications/Bandleader}
 	{Video Game Music Club}
 	{}
 	{January 2018 – Present}
 	{\begin{cvitems}
 		\item {Lead discussions and workshops on video game music analysis, music theory, composition, and music production}
 		\item {Manage mailing lists, online calendar, Discord server, and social media for the club}
+		\item {Arrange popular video game music for perfomance by the club ensemble.}
 		\end{cvitems}}
 
 	\vspace{-4mm}
 	\cventry
-	{Treasurer (2018-Present) \& Member (2017-18)}
+	{Treasurer (2018-Present) \& Webmaster (2019-Present)}
 	{FIRST Alumni and Mentors Network at Michigan (FAMNM)}
 	{}
 	{September 2017 – Present}
 	{\begin{cvitems}
 		\item {Fundraise over \$25,000 to establish an endowed scholarship for FIRST alumni at the University of Michigan}
-		\item {Coordinate the 2018 FIRST Robot Quick Build held at the University of Michigan North Campus in January}
 		\item {Draft and submit funding proposals to facilitate the improvement FAMNM events}
+		\item {Maintain the frontend and backend of the club website located at https://famnm.club}
 		\end{cvitems}}
 	
 	\vspace{-4mm}
 	\cventry
-	{Web Team Member}
+	{Web Team (2018-19) \& Bootcamp Lead (2019-Present)}
 	{Michigan Hackers}
 	{}
 	{January 2018 – Present}
 	{\begin{cvitems}
-		\item {Develop the back-end for the Michigan Hackers website (michiganhackers.org) using the Go framework Gin.}
-		\item {Attend weekly meetings to promote using CS for personal projects within the student body of U of M}
+		\item {Organize weekly presentations to introduce new CS students to concepts essential to academic and career success.}
+		\item {Topics include: version control, test-driven development, OOP and FP basics.}
+		\item {Develop the back-end for the Michigan Hackers website (michiganhackers.org) using Gin, a Golang framework.}
 		\end{cvitems}}
 	\vspace{-4mm}
 
