--- a/resume.tex
+++ b/resume.tex
@@ -47,9 +47,11 @@
 %     Profile
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{center}
-	\headerfirstnamestyle{Eashwar} \headerlastnamestyle{Mohan} \\
+	\headerfirstnamestyle{Curriculum Vitae/Resume}
+	\headerlastnamestyle{Eashwar Mohan}
+	% \headerfirstnamestyle{Eashwar}  \headerlastnamestyle{Mohan} \\
 
-	{\color{darkgreen}{\faEnvelope\ \bodyfont{eashwar@umich.edu}}} | {\color{darkgreen}{\faMapMarker\ \bodyfont{Ann Arbor, MI}}} | {\color{darkgreen}{\faLink\ \bodyfont{eash.dev}}}
+	{\color{darkgreen}{\bodyfont{Resume}}} | {\color{darkgreen}{\bodyfont{UMID 31216382}}} | {\color{darkgreen}{\bodyfont{SUGS MSE CSE}}} | {\color{darkgreen}{\faEnvelope\ \bodyfont{eashwar@umich.edu}}} | {\color{darkgreen}{\faMapMarker\ \bodyfont{Ann Arbor, MI}}} | {\color{darkgreen}{\faLink\ \bodyfont{eash.dev}}}
 \end{center}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %     Education
@@ -61,9 +63,19 @@
 	{BSE in Computer Science/Minor in Music}
 	{University of Michigan - Ann Arbor}
 	{}
-	{Expected Graduation May 2020}
+	{September 2017-May 2020}
 	{\begin{cvitems}
 		\item{GPA: 3.810}
+		\end{cvitems}}
+
+\vspace{-4mm}
+\cventry
+	{High School Dual Enrollment}
+	{Lansing Community College}
+	{}
+	{September 2016-April 2017}
+	{\begin{cvitems}
+		\item{GPA: 4.0. Courses Taken: Multivariable Calculus, Linear Algebra}
 		\end{cvitems}}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -73,6 +85,17 @@
 \cvsection{Employment}
 \vspace{-2mm}
 
+	\cventry
+	{Technical Lab Assistant}
+	{Crowds and Machines Lab at the University of Michigan}
+	{Ann Arbor, MI}
+	{January 2019 – Present}
+	{\begin{cvitems}
+		\item {Educate undergraduate researchers on various tools and skills, such as version control, and software architecture}
+		\item {Hold office hours to assist researchers with technical problems and create/maintain documentation for the lab.}
+	\end{cvitems}}
+
+	\vspace{-4mm}
 	\cventry
 	{Software Engineer Intern}
 	{Roblox Corporation}
@@ -87,17 +110,6 @@
 
 	\vspace{-4mm}
 	\cventry
-	{Technical Lab Assistant}
-	{Crowds and Machines Lab at the University of Michigan}
-	{Ann Arbor, MI}
-	{January 2019 – Present}
-	{\begin{cvitems}
-		\item {Educate undergraduate researchers on various tools and skills, such as version control, and software architecture}
-		\item {Hold office hours to assist researchers with technical problems and create/maintain documentation for the lab.}
-	\end{cvitems}}
-
-	\vspace{-4mm}
-	\cventry
 	{Software Engineer Intern}
 	{TechSmith Corporation}
 	{Okemos, MI}
@@ -107,27 +119,27 @@
 		\item {Implemented new features for Camtasia, using MFC (C++) and WPF (C\# + XAML).}
 	\end{cvitems}}
 
-	% \vspace{-4mm}
-	% \cventry
-	% {Software Engineer Intern}
-	% {Delta Dental of Michigan}
-	% {Okemos, MI}
-	% {June 2017 – August 2017}
-	% {\begin{cvitems}
-	% 	\item {Integrated Open ID Connect (OIDC)/SecureAuth with desktop and web applications}
-	% 	\item {Designed and implemented a REST API using the Java Persistence API (JPA), and Enterprise JavaBeans (EJB)}
-	% 	\end{cvitems}}
+	\vspace{-4mm}
+	\cventry
+	{Computer Consultant}
+	{University of Michigan Dental Informatics}
+	{Ann Arbor, MI}
+	{September 2017 – Present}
+	{\begin{cvitems}
+		\item {Assist dental faculty and students of the School of Dentistry over email, phone, and in-person with technological issues}
+		\item {File and assign tickets using the ITS and manage the Desktop Support front desk}
+		\end{cvitems}}
 
-	% \vspace{-4mm}
-	% \cventry
-	% {Computer Consultant}
-	% {University of Michigan Dental Informatics}
-	% {Ann Arbor, MI}
-	% {September 2017 – Present}
-	% {\begin{cvitems}
-	% 	\item {Assist dental faculty and students of the School of Dentistry over email, phone, and in-person with technological issues}
-	% 	\item {File and assign tickets using the ITS and manage the Desktop Support front desk}
-	% 	\end{cvitems}}
+	\vspace{-4mm}
+	\cventry
+	{Software Engineer Intern}
+	{Delta Dental of Michigan}
+	{Okemos, MI}
+	{June 2017 – August 2017}
+	{\begin{cvitems}
+		\item {Integrated Open ID Connect (OIDC)/SecureAuth with desktop and web applications}
+		\item {Designed and implemented a REST API using the Java Persistence API (JPA), and Enterprise JavaBeans (EJB)}
+		\end{cvitems}}
 
 \vspace{-5mm}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -137,7 +149,16 @@
 \vspace{-2mm}
 
 	\cventry
-	{Control Mario level 1-1 of Super Mario Bros. by playing the overworld theme on a MIDI keyboard. Made for MHacks 11.
+	{Music education puzzle game that teaches the player about drumming.
+	 Made with Unity2D.}
+	{GridBeat}
+	{GitHub: projectlegato/projectlegato}
+	{}
+	{}
+
+	\vspace{-6mm}
+	\cventry
+	{Control a level of Super Mario Bros. by playing the overworld theme on a MIDI keyboard. Made for MHacks 11.
 	 Made with pygame, pyautogui}
 	{Super MIDIo Bros.}
 	{GitHub: eashwar/super-midio-bros}
@@ -146,7 +167,7 @@
 
 	\vspace{-6mm}
 	\cventry
-	{Command line tool to control of basic Spotify playback in bash. Made with ExpressJS, shell scripting}
+	{Command line tool to control of basic Spotify playback in bash. Made with Express, Bash}
 	{now-playing: Spotify control for Bash}
 	{GitHub: eashwar/now-playing}
 	{}
@@ -164,7 +185,7 @@
 	\cventry
 	{A personal website displaying a full list of past and current projects. Frameworks used: Bootstrap, Jekyll, JQuery, MathJax}
 	{Personal Website}
-	{eash.fyi}
+	{eash.dev}
 	{}
 	{}
 	
@@ -173,6 +194,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %     Activities
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\newpage
 \vspace{-2mm}
 \cvsection{Activities}
 \vspace{-2mm}
@@ -213,9 +235,23 @@
 	\vspace{-4mm}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%     Skills
+%     Awards
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \vspace{-1mm}
+\cvsection{Awards}
+\vspace{-2mm}
+	\cventry
+	{Recipient}
+	{Leinweber Software Scholarship}
+	{}
+	{January 2019 – Present}
+	{}
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%     Skills
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\vspace{-6mm}
 \cvsection{Skills}
 \vspace{-2mm}
 	\cventry
